# mimamori

./: CHANGELOG.md  README.md  cz.toml  pyproject.toml
.github/workflows/: bump-version.yaml
src/mimamori/: globals.py  main.py  mihomo_config.py  settings.py  utils.py
